--- a/site/assets/styles/variable.scss
+++ b/site/assets/styles/variable.scss
@@ -2,7 +2,6 @@ $widescreen-enabled: true;
 $fullhd-enabled: true;
 
 $body-background-color: var(--body-bg-color);
-$body-background-dark: var(--body-bg-color);
 
 $scheme-main: var(--scheme-main);
 $scheme-main-bis: var(--scheme-main);
@@ -16,7 +15,6 @@ $text: var(--text);
 $text-strong: var(--text);
 $navbar-box-shadow-color: var(--navbar-box-shadow-color);
 $title-color: var(--text);
-
 
 .light-mode {
   --scheme-main: $black;
@@ -40,9 +38,10 @@ $title-color: var(--text);
 
   --body-bg-color: #f3f3f3;
   --bg-color: #fff;
-  --bg-color2: rgba(247, 248, 250, .7);
+  --bg-color2: rgba(247, 248, 250, 0.7);
   --bg-color3: #f2f3f5;
   --bg-color4: #f2f2f2;
+  --bg-color5: #e8f3ff;
   --bg-color-alpha: rgba(29, 33, 41, 0.5); // 50%透明
 
   --border-color: #e9e9e9;
@@ -85,6 +84,7 @@ $title-color: var(--text);
   --bg-color2: #3a3a3a;
   --bg-color3: #3a3a3a;
   --bg-color4: #3a3a3a;
+  --bg-color5: #3a3a3a;
   --bg-color-alpha: rgba(29, 33, 41, 0.5); // 50%透明
 
   --border-color: #4a4a4a;
@@ -98,5 +98,45 @@ $title-color: var(--text);
   .navbar-dropdown {
     background-color: #3a3a3a !important;
     border-top-color: #272727 !important;
+
+    .navbar-item {
+      &:hover {
+        background-color: #272727;
+      }
+    }
+  }
+
+  .tag {
+    background-color: #3a3a3a;
+
+    & > a {
+      color: var(--text);
+    }
+  }
+
+  pre {
+    background-color: #3a3a3a;
+  }
+
+  .content {
+    blockquote {
+      background-color: #3a3a3a;
+      border-left: 5px solid #272727;
+    }
+  }
+
+  .button.is-text:hover,
+  .button.is-text.is-hovered,
+  .button.is-text:focus,
+  .button.is-text.is-focused {
+    background-color: #3a3a3a;
+    color: var(--text);
+  }
+
+  a {
+    color: var(--text-link-color);
+    &:hover {
+      color: var(--text-link-hover-color);
+    }
   }
 }
